2004-02-23  Jeffrey Stedfast  <fejj@ximian.com>

	* em-message-browser.c (emmb_list_message_selected): Protect
	against NULL uids.
	(emmb_set_message): Same.

	* em-format-quote.c (emfq_format_message): Print the headers when
	forwarding inline/quoted. Fixes bug #53916.

	* em-folder-tree.c (tree_drag_motion): We want UID_LISTs to drop
	with the MOVE action by default. Fixes a common complaint from
	IRC.

2004-02-23  Not Zed  <NotZed@Ximian.com>

	* em-format.c (emf_multipart_signed): check mps->protocol != NULL
	before dereferencing it.  See #54406.

2004-02-20  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c (emfv_list_key_press): Delete key should always
	delete, never undelete (bug #53215). Also fixes a bug where
	uids->len was being accessed after uids had been free'd.

	Fix for bug #53997

	* em-folder-view.c (emfv_list_message_selected): Ref the emfv
	before spawning the async event.
	(emfv_list_done_message_selected): Check emfv->preview !=
	NULL. Also unref the emfv when done.

2004-02-20  Dan Winship  <danw@ximian.com>

	* mail-component.c (set_prop): Remove the debug message here.

2004-02-20  Not Zed  <NotZed@Ximian.com>

	* mail-vfolder.c (mail_vfolder_add_uri): fix for vfolder-rule api
	changes.

	* mail-folder-cache.c (unset_folder_info, setup_folder)
	(rename_folders): switch the sense of the no select checks.  TEST!

2004-02-19  Chris Toshok  <toshok@ximian.com>

	* em-format.c (emf_application_xpkcs7mime): wrap code with
	ENABLE_SMIME instead of HAVE_NSS.
	(emf_multipart_signed): same.
	(type_builtin_table): same.

2004-02-19  Rodney Dawes  <dobey@ximian.com>

	* em-folder-tree.c (emft_save_state): Revert previous change, doh

2004-02-19  Rodney Dawes  <dobey@ximian.com>

	* em-folder-tree.c (emft_save_state): Don't set the timeout id to 0
	and then immediately return FALSE, which tries to remove the timeout

2004-02-19  Not Zed  <NotZed@Ximian.com>

	* mail-send-recv.c (get_receive_type): 